Adjusted the date and title in the timeline section

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 Technological University Dublin
                             </h5>
                             <p>4th Year (September 2024 - Present)</p>
@@ -768,7 +768,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/Typeetec-logo-2.jpg" alt="Typetec Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 Typetec Ltd
                             </h5>
                             <p>Intern Technical Support Engineer - (Jan 2024 - Aug 2024) <br> (On-Site)</p>
@@ -792,7 +792,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/kkr_logo.jpg" alt="KKR Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">KKR</h5>
+                            <h5 class="fw-bold">KKR</h5>
                             <p>Intern IT Support - (Jun 2024 - Jul 2024) (On - Site)</p>
                             <p>On-Site IT Support, Hardware Installations, Network Monitoring and Troubleshooting.</p>
                             <a href="https://www.kkr.com/" target="_blank" class="education-timeline-button">
@@ -813,7 +813,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 Technological University Dublin
                             </h5>
                             <p>3rd Year (September 2023 - Jan 2024)</p>
@@ -874,7 +874,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 Technological University Dublin
                             </h5>
                             <p>2nd Year (September 2022 - June 2023)</p>
@@ -940,7 +940,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/technological_university_dublin_logo.jpg" alt="TU Dublin Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 Technological University Dublin
                             </h5>
                             <p>1st Year (September 2021 - June 2022)</p>
@@ -1006,7 +1006,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/Bife-3.png" alt="Bife-Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 Bray Institute of Further Education
                             </h5>
                             <p>PLC Level 6 (September 2020 - June 2021)</p>
@@ -1030,7 +1030,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/currysplc_logo.jpg" alt="Currys-Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 Currys
                             </h5>
                             <p>IT Hardware Sales Associate (Nov 2019 - Apr 2020) (On-Site)</p>
@@ -1053,7 +1053,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/Bife-3.png" alt="Bife-Logo">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 Bray Institute of Further Education
                             </h5>
                             <p>PLC Level 5 (September 2019 - June 2020)</p>
@@ -1077,7 +1077,7 @@
                             <div class="education-timeline-icon">
                                 <img src="img/firstcare_ireland_logo.jpg" alt="First Care Ireland">
                             </div>
-                            <h5 class="fw-bold text-primary">
+                            <h5 class="fw-bold">
                                 First-Care Ireland
                             </h5>
                             <p>Patient Care Assistant (Mar 2012 - June 2019) (On-Site)</p>
@@ -1112,7 +1112,7 @@
     <section id="contact" class="d-flex align-items-center scroll-element"
         style="background: url('./img/wallpaper-2.jpg') no-repeat center center; background-size: cover; position: relative; padding: 50px 0;">
         <div class="container text-center contact-container">
-            <h2>Contact Me</h2>
+            <h2 class="text-light">Contact Me</h2>
             <p>Feel free to reach out for any inquiries or collaborations.</p>
 
             <!-- Contact Information -->
