change some of the text-primary to light

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         <!-- Modal for Bike Rental System -->
         <div id="education-projectModal1" class="education-modal">
             <div class="education-modal-content">
-                <div class="education-modal-header text-primary">
+                <div class="education-modal-header">
                     Bike Rental System
                     <span class="education-close"
                         onclick="educationCloseModal('education-projectModal1')">&times;</span>
@@ -530,7 +530,7 @@
         <!-- Modal for Java Text-Based RPG -->
         <div id="education-projectModal2" class="education-modal">
             <div class="education-modal-content">
-                <div class="education-modal-header text-primary">
+                <div class="education-modal-header">
                     Java Text-Based RPG
                     <span class="education-close"
                         onclick="educationCloseModal('education-projectModal2')">&times;</span>
@@ -556,7 +556,7 @@
         <!-- Modal for First Year Web Design Project -->
         <div id="education-projectModal3" class="education-modal">
             <div class="education-modal-content">
-                <div class="education-modal-header text-primary">
+                <div class="education-modal-header">
                     1st Year Web Design Project
                     <span class="education-close"
                         onclick="educationCloseModal('education-projectModal3')">&times;</span>
@@ -584,7 +584,7 @@
         <!-- Modal for Gaming Dashboard Overview -->
         <div id="education-projectModal4" class="education-modal">
             <div class="education-modal-content">
-                <div class="education-modal-header text-primary">
+                <div class="education-modal-header">
                     Gaming Dashboard Overview
                     <span class="education-close"
                         onclick="educationCloseModal('education-projectModal4')">&times;</span>
@@ -616,7 +616,7 @@
         <!-- Modal for Performance Optimization -->
         <div id="education-projectModal5" class="education-modal">
             <div class="education-modal-content">
-                <div class="education-modal-header text-primary">
+                <div class="education-modal-header">
                     Performance Optimization
                     <span class="education-close"
                         onclick="educationCloseModal('education-projectModal5')">&times;</span>
@@ -645,7 +645,7 @@
         <!-- Modal for Gaming Library -->
         <div id="education-projectModal6" class="education-modal">
             <div class="education-modal-content">
-                <div class="education-modal-header text-primary">
+                <div class="education-modal-header">
                     Gaming Library
                     <span class="education-close"
                         onclick="educationCloseModal('education-projectModal6')">&times;</span>
@@ -720,7 +720,7 @@
                     <div id="education-award2024" class="education-modal">
                         <div class="education-modal-content">
                             <!-- Modal Header -->
-                            <div class="education-modal-header text-info">
+                            <div class="education-modal-header">
                                 Best Future Solution Award
                                 <span class="education-close"
                                     onclick="educationCloseModal('education-award2024')">&times;</span>
@@ -839,7 +839,7 @@
                     <div id="education-grades2023" class="education-modal">
                         <div class="education-modal-content">
                             <!-- Modal Header -->
-                            <div class="education-modal-header text-info">
+                            <div class="education-modal-header">
                                 Third Year Modules (GPA: 3.48)
                                 <span class="education-close"
                                     onclick="educationCloseModal('education-grades2023')">&times;</span>
@@ -900,7 +900,7 @@
                     <div id="education-grades2022" class="education-modal">
                         <div class="education-modal-content">
                             <!-- Modal Header -->
-                            <div class="education-modal-header text-info">
+                            <div class="education-modal-header">
                                 Second Year Modules (GPA: 3.60)
                                 <span class="education-close"
                                     onclick="educationCloseModal('education-grades2022')">&times;</span>
@@ -967,7 +967,7 @@
                     <div id="education-grades2021" class="education-modal">
                         <div class="education-modal-content">
                             <!-- Modal Header -->
-                            <div class="education-modal-header text-info">
+                            <div class="education-modal-header">
                                 First Year Modules (GPA: 3.658)
                                 <span class="education-close"
                                     onclick="educationCloseModal('education-grades2021')">&times;</span>
@@ -1093,7 +1093,7 @@
         <div id="mapModal" class="education-modal">
             <div class="education-modal-content">
                 <!-- Modal Header -->
-                <div class="education-modal-header text-info">
+                <div class="education-modal-header">
                     Location Map
                     <span class="education-close" id="closeMapModal">&times;</span>
                 </div>
