change some of the text-primary to light

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div id="education-contactModal" class="education-modal">
         <div class="education-modal-content">
             <!-- Modal Header -->
-            <div class="education-modal-header text-primary">
+            <div class="education-modal-header">
                 <img src="img/RD.png" alt="Contact Icon" style="width: 30px; margin-right: 10px;">
                 Contact Me
                 <span class="education-close" onclick="educationCloseModal('education-contactModal')">&times;</span>
@@ -208,7 +208,7 @@
         <div id="education-hobbiesModal" class="education-modal">
             <div class="education-modal-content">
                 <!-- Modal Header -->
-                <div class="education-modal-header text-primary">
+                <div class="education-modal-header">
                     <img src="img/RD.png" alt="Hobbies Icon" style="width: 30px; margin-right: 10px;">
                     Hobbies & Interests
                     <span class="education-close" onclick="educationCloseModal('education-hobbiesModal')">&times;</span>
