--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
             <div class="education-modal-body">
                 <form onsubmit="handleSubmit(event)">
                     <div class="mb-3">
-                        <label for="nameInput" class="form-label text-primary">Your Name</label>
+                        <label for="nameInput" class="form-label">Your Name</label>
                         <input type="text" class="form-control" id="nameInput" required>
                     </div>
                     <div class="mb-3">
-                        <label for="emailInput" class="form-label text-primary">Your Email</label>
+                        <label for="emailInput" class="form-label">Your Email</label>
                         <input type="email" class="form-control" id="emailInput" required>
                     </div>
                     <div class="mb-3">
-                        <label for="messageInput" class="form-label text-primary">Your Message</label>
+                        <label for="messageInput" class="form-label">Your Message</label>
                         <textarea class="form-control" id="messageInput" rows="4" required></textarea>
                     </div>
                     <button type="submit" class="education-timeline-button w-100">
