Added a 2nd page for the Portfolio feature report

--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
                 <a href="#work-section" class="navbar-nav-menu-item"><i class="fas fa-briefcase me-3"></i>Work and
                     Education</a>
                 <a href="#contact" class="navbar-nav-menu-item"><i class="fas fa-phone-alt me-3"></i>Contact Me</a>
+                <a href="features-report.html" class="navbar-nav-menu-item"><i class="fas fa-file-alt me-3"></i>Portfolio Features Report</a>
             </div>
         </div>
-        <div id="navbar-overlay" onclick="closeMenu()"></div> <!-- Added overlay -->
+        <div id="navbar-overlay" onclick="closeMenu()"></div> 
     </div>
     <!-- End of Navbar -->
 
