Added a link to the hosted website and github repo link

--- a/features-report.html
+++ b/features-report.html
@@ -156,6 +156,18 @@
                     components and extra features
                     such as the time feature and contact form functionality etc.
                 </p>
+                <p>
+                    View the live website here: 
+                    <a href="https://ricardo-danganan-portfolio-website.vercel.app/" target="_blank" rel="noopener noreferrer">
+                        Click here to visit my portfolio
+                    </a>.
+                </p>
+                <p>
+                    View the GitHub repository for this website here:  
+                    <a href="https://github.com/ricardodanganan/portfolio-website" target="_blank" rel="noopener noreferrer">
+                        Click here to view the GitHub repo
+                    </a>.
+                </p>
             </article>
 
             <article>
