Added a link to the hosted website and github repo link

--- a/features-report.html
+++ b/features-report.html
@@ -157,6 +157,9 @@
                     such as the time feature and contact form functionality etc.
                 </p>
                 <p>
+                    The website is hosted through <strong>Vercel</strong>, ensuring fast deployment and easy access for users. All project files, including HTML, CSS, and JavaScript, are managed and stored in a <strong>GitHub repository</strong> for version control and collaboration.
+                </p>
+                <p>
                     View the live website here: 
                     <a href="https://ricardo-danganan-portfolio-website.vercel.app/" target="_blank" rel="noopener noreferrer">
                         Click here to visit my portfolio
