Added a link to the hosted website and github repo link

--- a/features-report.html
+++ b/features-report.html
@@ -162,13 +162,19 @@
                 <p>
                     View the live website here: 
                     <a href="https://ricardo-danganan-portfolio-website.vercel.app/" target="_blank" rel="noopener noreferrer">
-                        Click here to visit my portfolio
+                        Click here to visit my portfolio website
                     </a>.
                 </p>
                 <p>
                     View the GitHub repository for this website here:  
                     <a href="https://github.com/ricardodanganan/portfolio-website" target="_blank" rel="noopener noreferrer">
                         Click here to view the GitHub repo
+                    </a>.
+                </p>
+                <p>
+                    View the Vercel Production Deployment here:  
+                    <a href="https://vercel.com/ricardodanganans-projects/portfolio-website" target="_blank" rel="noopener noreferrer">
+                        Click here to view the Vercel Production Deployment 
                     </a>.
                 </p>
             </article>
