fix the pathfile of the navbar logo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <div class="navbar-flex3 text-center" id="navbar-siteBrand">
                     <a href="#hero" id="navbar-logoLink">
-                        <img src="/img/RD-2.png" alt="Ricardo Danganan Logo" id="navbar-logo">
+                        <img src="./img/RD-2.png" alt="Ricardo Danganan Logo" id="navbar-logo">
                     </a>
                 </div>
 
