--- a/features-report.html
+++ b/features-report.html
@@ -79,7 +79,7 @@
         <div class="education-modal-content">
             <!-- Modal Header -->
             <div class="education-modal-header">
-                <img src="img/RD.png" alt="Contact Icon" style="width: 30px; margin-right: 10px;">
+                <img src="./img/RD.png" alt="Contact Icon" style="width: 30px; margin-right: 10px;">
                 Contact Me
                 <span class="education-close" onclick="educationCloseModal('education-contactModal')">&times;</span>
             </div>
