fix the pathfile of the navbar logo

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="education-modal-content">
             <!-- Modal Header -->
             <div class="education-modal-header">
-                <img src="img/RD.png" alt="Contact Icon" style="width: 30px; margin-right: 10px;">
+                <img src="./img/RD.png" alt="Contact Icon" style="width: 30px; margin-right: 10px;">
                 Contact Me
                 <span class="education-close" onclick="educationCloseModal('education-contactModal')">&times;</span>
             </div>
@@ -210,7 +210,7 @@
             <div class="education-modal-content">
                 <!-- Modal Header -->
                 <div class="education-modal-header">
-                    <img src="img/RD.png" alt="Hobbies Icon" style="width: 30px; margin-right: 10px;">
+                    <img src="./img/RD.png" alt="Hobbies Icon" style="width: 30px; margin-right: 10px;">
                     Hobbies & Interests
                     <span class="education-close" onclick="educationCloseModal('education-hobbiesModal')">&times;</span>
                 </div>
